Made the interface of the Color To Alpha filter more friendly

1) Added a slider to the 'Threshold' parameter
2) Added a KColorButton button for choosing a color
3) Fixed application of the filter with "Enter" key

BUG:316985