krita/plugins/filters/colors/kis_wdg_color_to_alpha.h
@@ -45,6 +45,8 @@ public:
 
 private slots:
     void slotFgColorChanged(const KoColor &color);
+    void slotColorSelectorChanged(const QColor &color);
+    void slotCustomColorSelected(const QColor &color);
 
 private:
     Ui_WdgColorToAlphaBase* m_widget;
